[package]
authors = ["Frank Denis <github@pureftpd.org>"]
description = "An Adaptative Replacement Cache for Rust."
keywords = ["data-structures"]
license = "MIT/Apache-2.0"
name = "arc-cache"
repository = "https://github.com/jedisct1/rust-arc-cache"
version = "0.2.4"
categories = ["algorithms", "caching", "memory-management"]
edition = "2018"

[dependencies]
xlru-cache = { git = "https://github.com/Kerollmops/rust-xlru-cache.git", rev = "3c90f49" }

[badges]
travis-ci = { repository = "jedisct1/rust-arc-cache" }
appveyor  = { repository = "jedisct1/rust-arc-cache" }
